added logo and button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -177,3 +177,13 @@ small {
 small {
   text-transform: uppercase;
 }
+.logo {
+  
+  
+  img {
+    height: 7em;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
